--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ckeditor/ckeditor5-essentials": "^11.0.1",
     "@ckeditor/ckeditor5-heading": "^11.0.1",
     "@ckeditor/ckeditor5-list": "^12.0.1",
+    "@ckeditor/ckeditor5-link": "11.0.1",
     "@ckeditor/ckeditor5-paragraph": "^11.0.1",
     "@ckeditor/ckeditor5-table": "^12.0.1",
     "@ckeditor/ckeditor5-theme-lark": "^13.0.1",
