--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@digilar/ckeditor5-build-digilar",
   "description": "Custom build for Digilar.",
-  "version": "1.2.0",
+  "version": "2.0.0-beta",
   "keywords": [
     "ckeditor5-build",
     "ckeditor",
@@ -29,24 +29,24 @@
   },
   "homepage": "https://github.com/digilar/ckeditor5-build-digilar#readme",
   "devDependencies": {
-    "@ckeditor/ckeditor5-basic-styles": "^29.2.0",
-    "@ckeditor/ckeditor5-block-quote": "^29.2.0",
-    "@ckeditor/ckeditor5-core": "^29.2.0",
-    "@ckeditor/ckeditor5-dev-utils": "^25.4.2",
-    "@ckeditor/ckeditor5-dev-webpack-plugin": "^25.4.2",
-    "@ckeditor/ckeditor5-editor-classic": "^29.2.0",
-    "@ckeditor/ckeditor5-essentials": "^29.2.0",
-    "@ckeditor/ckeditor5-heading": "^29.2.0",
-    "@ckeditor/ckeditor5-link": "^29.2.0",
-    "@ckeditor/ckeditor5-list": "^29.2.0",
-    "@ckeditor/ckeditor5-paragraph": "^29.2.0",
-    "@ckeditor/ckeditor5-table": "^29.2.0",
-    "@ckeditor/ckeditor5-theme-lark": "^29.2.0",
+    "@ckeditor/ckeditor5-basic-styles": "^32.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^32.0.0",
+    "@ckeditor/ckeditor5-core": "^32.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^28.0.4",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^28.0.4",
+    "@ckeditor/ckeditor5-editor-classic": "^32.0.0",
+    "@ckeditor/ckeditor5-essentials": "^32.0.0",
+    "@ckeditor/ckeditor5-heading": "^32.0.0",
+    "@ckeditor/ckeditor5-link": "^32.0.0",
+    "@ckeditor/ckeditor5-list": "^32.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^32.0.0",
+    "@ckeditor/ckeditor5-table": "^32.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^32.0.0",
     "postcss-loader": "^3.0.0",
-    "raw-loader": "^3.1.0",
-    "style-loader": "^1.3.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "raw-loader": "^4.0.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   },
   "engines": {
     "node": ">=12.0.0",
@@ -55,6 +55,5 @@
   "scripts": {
     "build": "webpack --mode production",
     "preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
-  },
-  "dependencies": {}
+  }
 }
