--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@digilar/ckeditor5-build-digilar",
   "description": "Custom build for Digilar.",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "keywords": [
     "ckeditor5-build",
     "ckeditor",
@@ -29,24 +29,25 @@
   },
   "homepage": "https://github.com/digilar/ckeditor5-build-digilar#readme",
   "devDependencies": {
-    "@ckeditor/ckeditor5-basic-styles": "^32.0.0",
-    "@ckeditor/ckeditor5-block-quote": "^32.0.0",
-    "@ckeditor/ckeditor5-core": "^32.0.0",
-    "@ckeditor/ckeditor5-dev-utils": "^28.0.4",
-    "@ckeditor/ckeditor5-dev-webpack-plugin": "^28.0.4",
-    "@ckeditor/ckeditor5-editor-classic": "^32.0.0",
-    "@ckeditor/ckeditor5-essentials": "^32.0.0",
-    "@ckeditor/ckeditor5-heading": "^32.0.0",
-    "@ckeditor/ckeditor5-link": "^32.0.0",
-    "@ckeditor/ckeditor5-list": "^32.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^32.0.0",
-    "@ckeditor/ckeditor5-table": "^32.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^32.0.0",
-    "postcss-loader": "^3.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^36.0.1",
+    "@ckeditor/ckeditor5-block-quote": "^36.0.1",
+    "@ckeditor/ckeditor5-core": "^36.0.1",
+    "@ckeditor/ckeditor5-dev-translations": "^35.0.3",
+    "@ckeditor/ckeditor5-dev-utils": "^35.0.3",
+    "@ckeditor/ckeditor5-editor-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-essentials": "^36.0.1",
+    "@ckeditor/ckeditor5-heading": "^36.0.1",
+    "@ckeditor/ckeditor5-link": "^36.0.1",
+    "@ckeditor/ckeditor5-list": "^36.0.1",
+    "@ckeditor/ckeditor5-paragraph": "^36.0.1",
+    "@ckeditor/ckeditor5-table": "^36.0.1",
+    "@ckeditor/ckeditor5-theme-lark": "^36.0.1",
+    "css-loader": "^5.2.7",
+    "postcss-loader": "^4.3.0",
     "raw-loader": "^4.0.2",
-    "style-loader": "^1.3.0",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2"
+    "style-loader": "^2.0.0",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^4.10.0"
   },
   "engines": {
     "node": ">=12.0.0",
